# rust_audio_shenanigans

./: .gitignore  Cargo.toml  README.md  perf.md
.github/workflows/: build.yml
benches/: bench.rs
git-hooks/: pre-commit.sh
src/: effects.rs  generators.rs  instrument.rs  lib.rs  main.rs  oscillator.rs  partial_wave.rs  player.rs  variable.rs  wave.rs  wave_generator.rs  waves.rs
src/waves/: adsr.rs  constant.rs  misc.rs  mix.rs
