[package]
name = "rust_audio_shenanigans"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.2"
eframe = "0.24.1"
egui = "0.24.1"
egui_file = "0.13.0"
midly = "0.5.3"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync"] }

[[bin]]
name = "rust_audio_shenanigans_bin"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = [
  "async_tokio",
  "async",
  "futures",
] }
